syntax = "proto3";

package pb;
import "barber/barber_shops.proto";
option go_package = "barbershop/src/pb/barber";


message QueryBarberShopsRequest {
    string query = 1;
}

message QueryBarberShopsResponse {
    repeated BarberShops barber_shops = 1;
}